--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             Dat is een beetje wie ik ben!
         </p>
         <p>Misschien kunnen wij wel eens een keertje een escape room doen en in record tijd oplossen 😉 of gewoon naar de maccie 😂</p>
-        <p><a href="index.html">Terug naar de puzzelpagina</a></p>
+        <p><a href="https://divinejudge.github.io/PuzzelBio/">Terug naar de puzzelpagina</a></p>
     </div>
 </body>
 </html>
